[package]
name = "p3-air"
description = "Plonky3 is a toolkit for implementing polynomial IOPs (PIOPs), such as PLONK and STARKs."
version = "0.1.7-succinct"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
p3-field = { path = "../field", version = "0.1.7-succinct" }
p3-matrix = { path = "../matrix", version = "0.1.7-succinct" }

[dev-dependencies]
p3-matrix = { path = "../matrix" }
